[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwp-parser"
version = "0.1.0"
description = "HWP 5.x document text extractor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dyarchy Project" }
]
keywords = ["hwp", "hanword", "korean", "document", "parser", "text-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "olefile>=0.46",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
hwp-parser = "hwp_parser.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/hwp-parser"
Repository = "https://github.com/yourusername/hwp-parser.git"

[tool.hatch.build.targets.wheel]
packages = ["src/hwp_parser"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
