[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwp2yaml"
version = "0.6.1"
description = "HWP 5.x / HWPX / HWP 3.x to YAML converter with structure preservation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dyarchy Project" }
]
keywords = ["hwp", "hwpx", "yaml", "hanword", "korean", "document", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "olefile>=0.47",
    "pyyaml>=6.0.3",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.14.13",
]

[project.scripts]
hwp2yaml = "hwp2yaml.cli:main"

[project.urls]
Homepage = "https://github.com/seunghyuoffice-design/hwp2yaml"
Repository = "https://github.com/seunghyuoffice-design/hwp2yaml.git"

[tool.hatch.build.targets.wheel]
packages = ["src/hwp2yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
